Fix Aria id not unique + Change the primary color because of the contrast ratio + Cleaning up some console log

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import-normalize; /* bring in normalize.css styles */
 
 :root{
-  --primary-color: #588157;
+  --primary-color: #517651;
   --primary-color-light-1: #a3b18a;
   --primary-color-light-2: #dad7cd;
   --primary-color-dark-1: #3a5a40;
